Fix Product page font , category page font , spacing between sections on homepage

--- a/css/indexCategory.css
+++ b/css/indexCategory.css
@@ -1,3 +1,9 @@
-.productList{
-	
+h4{
+    font-family: 'Nunito', sans-serif;
+	font-weight: 700;
+}
+
+.inline-list li{
+	font-family: 'Nunito', sans-serif;
+	font-size: 1.5rem;
 }
